MAX_KEYS_PER_DAY